# plat-lang-ide

./: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  resources.qrc
.github/workflows/: build.yml
assets/themes/: dark.qss  light.qss
cmake/: DeployWindowsRuntime.cmake.in
dev/: code-style.md
examples/: conditions.plat  fibonacci.plat  hello.plat  loops.plat  problems.plat  tables.plat
resources/linux/: plat-lang-ide.desktop.in
resources/windows/: plat_lang_ide.rc.in
src/: app_version.h.in  main.cpp
src/app/: about_dialog.cpp  about_dialog.h  command_palette_dialog.cpp  command_palette_dialog.h  main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h
src/editor/: code_editor.cpp  code_editor.h  code_highlighter.cpp  code_highlighter.h  editor_tabs.cpp  editor_tabs.h  find_replace_bar.cpp  find_replace_bar.h  text_file_io.cpp  text_file_io.h
src/panels/: bottom_panel.cpp  bottom_panel.h  code_assistant_panel.cpp  code_assistant_panel.h  file_explorer_panel.cpp  file_explorer_panel.h  output_panel.cpp  output_panel.h  problems_panel.cpp  problems_panel.h  terminal_panel.cpp  terminal_panel.h
src/services/: app_fonts.cpp  app_fonts.h  app_language.cpp  app_language.h  compiler_toolchain.cpp  compiler_toolchain.h  file_dialog_locations.cpp  file_dialog_locations.h  file_icon_provider.cpp  file_icon_provider.h  interpreter_settings.cpp  interpreter_settings.h  recent_files.cpp  recent_files.h
src/ui/: theme_manager.cpp  theme_manager.h  title_bar.cpp  title_bar.h
translations/: plat_lang_ide_li.ts  plat_lang_ide_nl.ts
